--- a/Semester B web 2019/includes/style.css
+++ b/Semester B web 2019/includes/style.css
@@ -24,14 +24,6 @@ a{
     position: absolute;
 }
 
-.Icons li span{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    padding-top: 15px;
-    padding-left: 18px;
-    position: absolute;
-}
-
 .Icons li{
     padding-top: 30px;
     list-style: none;
@@ -64,7 +56,7 @@ a{
 body header{
     padding-top:40px;
     padding-bottom: 40px;
-    background-image: url(/images/icon3.png);
+    background-image: url(/);
     width:auto;
     height:auto;
     display:block;
@@ -136,9 +128,13 @@ main{
     
 }
 
+#Git{
+    padding-right: 150px;
+}
+
 #Git a{  
     position: absolute;
-    background: #C6B393; 
+    background: #C6B393;  
 }
 
 #Git span{
@@ -151,28 +147,46 @@ main{
 
 #FiveLinks{
   padding-bottom: 53px; 
-  padding-left:200px;
+  padding-left:150px;
   
 }
 
 #FiveLinks a{
-    padding-left: 50px;
+    padding-left: 55px;
    
 }
 
 #FiveLinks span{
-    padding-left: 50px;
+    padding-left: 10px;
+    padding-top: 12px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 20px;
+    position: absolute;
 }
 
 #FiveLinks a{
-    padding-right: 100px;
+    padding-right: 80px;
 }
 
 
 #OtherLinks{
-  padding-top: 42px;  
+  padding-top: 42px; 
+  padding-bottom: 43px; 
 }
 
-/* TAL  ADIVI*/
+#OtherLinks a{
+    padding-right: 19px;  
+  }
+
+  #OtherLinks img{
+    height: 20px;
+    width: 20px;  
+  }
+
+footer span{
+    color:#ffffff;
+}
+
+footer span:hover{
+    color:#000000;
+}
