--- a/Semester B web 2019/includes/style.css
+++ b/Semester B web 2019/includes/style.css
@@ -56,7 +56,7 @@ a{
 body header{
     padding-top:40px;
     padding-bottom: 40px;
-    background-image: url(/);
+    background-image: url();
     width:auto;
     height:auto;
     display:block;
