--- a/Semester B web 2019/includes/style.css
+++ b/Semester B web 2019/includes/style.css
@@ -14,7 +14,13 @@ a{
 .Icons img{
     width: 40px;
     height: 40px;
+    transition:all 0.2s ease;
 }
+
+.Icons img:hover{
+    transform:scale(1.3);
+}
+
 
 .Icons li span{
     font-family: Arial, Helvetica, sans-serif;
@@ -30,6 +36,11 @@ a{
 }
 .imgPadding img{
     padding-right: 30px;
+    transition:all 0.5s ease;
+}
+
+.imgPadding img:hover{
+    transform:scale(1.05);
 }
 
 .links{
@@ -38,34 +49,42 @@ a{
 
 .links a{
     font-style: normal;
-    font-size: 14px;
+    font-size: 20px;
     font-family: Arial;
     text-decoration: none;
     padding-right: 25px;
-    color:#000000;
+    letter-spacing: 4px;
+    color: #222222;
+    opacity: 0.3;
     
 }
 
-
 .links a:hover{
-    color:#2404da;
-    text-decoration: underline;
-  
+    color: #1434E1;
+    opacity: 1;
 }
 
 body header{
     padding-top:40px;
     padding-bottom: 40px;
-    background-image: url();
+    background-image: url(../images/icon3.png);
     width:auto;
     height:auto;
     display:block;
     background-repeat: no-repeat;
+    transition:all 0.3s ease;
+    display:inline-block;
+    overflow: hidden;
+}
+
+
+body header:hover{
+    transform:scale(1.05);
 }
 body{
     padding-left: 125px;
     padding-top: 75px;
-    background-color: #f2f2f2
+    background-color: #f2f2f2;
 }
 body header a{
     font-family: Arial;
@@ -93,6 +112,11 @@ main section h2{
     padding-bottom: 135px;
     width: 570px;
     height: 417px;
+    transition:all 0.5s ease;
+}
+
+#BackImg:hover{
+    transform:scale(1.05);
 }
 
 #FrontImg{
@@ -100,7 +124,11 @@ main section h2{
     right: 255px;
     width: 350px;
     height: 453px;
-    
+    transition:all 0.5s ease;
+}
+
+#FrontImg:hover{
+    transform:scale(1.05);
 }
 
 #LenguagesGap{
@@ -139,7 +167,6 @@ main{
 
 #Git span{
     float: right;
-    font-size: 20px;
     padding-left: 10px;
     padding-top: 10px;
 }
@@ -152,15 +179,13 @@ main{
 }
 
 #FiveLinks a{
-    padding-left: 55px;
+    padding-left: 80px;
    
 }
 
 #FiveLinks span{
     padding-left: 10px;
     padding-top: 12px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
     position: absolute;
 }
 
@@ -179,15 +204,13 @@ main{
   }
 
   #OtherLinks img{
-    height: 20px;
-    width: 20px;  
+    height: 25px;
+    width: 25px;  
   }
 
 footer span{
     color:#ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
 
-footer span:hover{
-    color:#000000;
-}
-4
