--- a/Semester B web 2019/exercises/ex03/include/style.css
+++ b/Semester B web 2019/exercises/ex03/include/style.css
@@ -9,10 +9,15 @@ main, nav, article, aside, section, header,
 footer { display:block; }
 
 header {
+ position: relative;
  width:100%;
  height:123px;
  background-color: #F2E9E9;
  padding-top: 1px;              
+}
+
+a{
+    text-decoration: none;
 }
 
 footer {
@@ -52,6 +57,20 @@ footer {
     height: 23px;
 }
 
+/* #layout1 .box2{
+    top:44px;
+    left:0px;
+    width:75px;
+    height: 23px;
+}
+
+#layout1 .box3{
+    top:44px;
+    left:0px;
+    width:75px;
+    height: 23px;
+} */
+
 .clear {
     clear:both;
 }
@@ -76,3 +95,60 @@ article {
     margin-left: 15px;
     float:left;
 }
+
+
+ul{
+    display: block;
+    position: relative;
+    width: 350px;
+    margin: 52px auto;
+    list-style-type: none;
+}
+
+ul li {
+    position: relative;
+    font-family: "Ariel";
+    font-style: oblique;
+    font-size: 24px;
+    float: left;
+    width: 33.33%;
+    margin: 0px auto;
+    
+}
+
+ul li:hover{
+    text-decoration: underline;
+}
+
+ .selected .dot{
+    display: block;
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background-color: red;
+    border-radius: 50%;
+    margin: -12px 20px;
+}
+
+.MIX {
+   width: 25%; 
+}
+
+/* lec_4_46 */
+#brand{
+    position: relative;
+    width: 450px;
+    height: 150px;
+    background: red;
+}
+
+#brand p{
+    position: absolute;
+    right: 0px;
+    top: 15px;
+    text-align: center;
+    background: yellow;
+}
+/* /lec_4_46 */
+
+   
