--- a/Semester B web 2019/exercises/ex03/include/style.css
+++ b/Semester B web 2019/exercises/ex03/include/style.css
@@ -1,111 +1,266 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
 
-body{ font-family: Arial; }
-
-main, nav, article, aside, section, header,
-footer { display:block; }
-
-header {
- position: relative;
- width:100%;
- height:123px;
- background-color: #F2E9E9;
- padding-top: 1px;              
+body {
+    font-family: Arial;
 }
 
-a{
+main, nav, article, aside, section, header, footer {
+    display: block;
+}
+
+header {
+    position: relative;
+    width: 100%;
+    height: 123px;
+    background-color: #F2E9E9;
+    padding-top: 1px;
+}
+
+a {
     text-decoration: none;
 }
 
+#wrapper {
+    width: 881px;
+    height: 624px;
+    margin: 0px auto;
+    margin-top: 91px;
+    margin-bottom:145px; 
+    /* background-color: #333333; */
+}
+
 footer {
- width:100%;
- height:41px;
- background-color: #000000;
+    width: 100%;
+    height: 41px;
+    background-color: #000000;
 }
 
-#layout1 main{
- width: 881px;
- height:860px;
- margin: 0 auto;
- background-color: #333333;
-}
+/* #layout1 main {
+    background-color: #333333;
+} */
 
-#layout1 .text{
-    float:left;
+#layout1 .text {
+    position: relative;
+    float: left;
     width: 50%;
     height: 120px;
-    background-color: blue;
+    /* background-color: blue; */
+    
 }
 
-#layout1 .boxes{
+#layout1 .text h1{
+  position: absolute; 
+  top:176px;
+  font-size: 72px;   
+}
+
+#layout1 .text h3{
+    position: absolute; 
+    top:263px;
+    font-size: 24px;  
+  }
+
+#layout1 .boxes {
     position: relative;
-    top:0px;
-    left:0px;
-    float:left;
+    top: 0px;
+    left: 0px;
+    float: left;
     width: 50%;
-    height: 500px;
-    background-color: red;
+    height: 624px;
+    /* background-color: red; */
 }
 
-#layout1 .box1{
-    top:44px;
-    left:0px;
-    width:75px;
+#layout1 .box1 {
+    top: 44px;
+    left: 0px;
+    width: 75px;
     height: 23px;
 }
 
-/* #layout1 .box2{
-    top:44px;
+#layout1 .box2{
+    top:75px;
     left:0px;
-    width:75px;
-    height: 23px;
+    width:136px;
+    height: 46px;
 }
 
 #layout1 .box3{
-    top:44px;
+    top:132px;
     left:0px;
-    width:75px;
-    height: 23px;
-} */
-
-.clear {
-    clear:both;
+    width:134px;
+    height: 404px;
 }
 
-nav{
+#layout1 .box4{
+    top:547px;
+    left:0px;
+    width:88px;
+    height: 28px;
+}
+
+#layout1 .box5{
+    top:582px;
+    left: 0px;
+    width:25px;
+    height: 26px;
+    
+}
+
+#layout1 .box6{
+    top:582px;
+    left: 32px;
+    width:25px;
+    height: 26px;
+
+}
+
+#layout1 .box7{
+    top:44px;
+    left: 149px;
+    width:246px;
+    height: 352px;
+
+}
+
+#layout1 .box8{
+    top:412px;
+    left: 149px;
+    width:123px;
+    height: 212px;
+
+}
+
+#layout1 .box9{
+    top:412px;
+    left: 286px;
+    width:55px;
+    height:105px;
+
+}
+
+#layout1 .box10{
+    top:524px;
+    left: 286px;
+    width:110px;
+    height:58px;
+}
+
+
+#layout1 .box11{
+    top:0px;
+    right:0px;
+    width:28px;
+    height:55px;
+}
+
+
+#layout1 .box12{
+    top:66px;
+    right: 0px;
+    width:28px;
+    height:55px;
+}
+
+
+#layout1 .box13{
+    top:132px;
+    right: 0px;
+    width:28px;
+    height:55px;
+}
+
+
+#layout1 .box14{
+    top:198px;
+    right: 0px;
+    width:28px;
+    height:198px;
+}
+
+
+#layout1 .box15{
+    top:412px;
+    right: 0px;
+    width:55px;
+    height:105px;
+}
+
+.clear {
+    clear: both;
+}
+
+/* nav {
     width: 300px;
     height: 33px;
     margin: 50px auto;
     background-color: #000000;
 }
 
-.boxes div{
+nav span{
+    font-size: 24px;
+    color: #F2E9E9;
+    background-color: aqua;
+    width: 33.33%;
+}
+
+nav a{
+    display: block;
+    float: left;
+    margin: 0px auto;
+    margin-left: 15px;
+} */
+
+#layout1 ul{
+    width: 300px;
+    height: 33px;
+    margin: 50px auto;
+    background-color: blueviolet;
+    list-style-type: none;
+    
+}
+
+#layout1 ul li{
+    float: left;
+    margin: 0px auto;
+    margin-left: 15px;
+    
+}
+
+#layout1 ul li span{
+    font-size: 24px;
+    color: #000000;
+    /* background-color: aqua; */
+}
+
+.boxes div {
+    float: right;
     position: absolute;
-    background-color: #EBEF18;
+    background-color: aquamarine;
 }
 
 article {
     background-color: black;
-    width:126px;
+    width: 126px;
     height: 94px;
-    margin-top:15px;
+    margin-top: 15px;
     margin-left: 15px;
-    float:left;
+    float: left;
 }
 
-
-ul{
+/* #layout1 ul {
     display: block;
     position: relative;
     width: 350px;
-    margin: 52px auto;
+    margin: 0px auto;
+    margin-top: 52px;
+    margin-bottom: 38px;
     list-style-type: none;
 }
 
-ul li {
+#layout1 ul li {
     position: relative;
     font-family: "Ariel";
     font-style: oblique;
@@ -113,14 +268,13 @@ ul li {
     float: left;
     width: 33.33%;
     margin: 0px auto;
-    
 }
 
-ul li:hover{
+#layout1 ul li:hover {
     text-decoration: underline;
-}
+} */
 
- .selected .dot{
+/* .selected .dot {
     display: block;
     position: absolute;
     height: 10px;
@@ -128,27 +282,42 @@ ul li:hover{
     background-color: red;
     border-radius: 50%;
     margin: -12px 20px;
+} */
+
+.dot{
+    position: relative;
+    display: block;
+    height: 14px;
+    width: 14px; 
+    bottom: 4px;
+    background-color: red;
+    border-radius: 50%;
+    
 }
 
-.MIX {
-   width: 25%; 
+#layout1 .dot{
+    left: 30px;
 }
+
+/* #layout1 .MIX {
+    width: 25%;
+} */
 
 /* lec_4_46 */
-#brand{
+
+#brand {
     position: relative;
     width: 450px;
     height: 150px;
     background: red;
 }
 
-#brand p{
+#brand p {
     position: absolute;
     right: 0px;
     top: 15px;
     text-align: center;
     background: yellow;
 }
-/* /lec_4_46 */
 
-   
+/* /lec_4_46 */
