--- a/Semester B web 2019/exercises/ex03/include/style.css
+++ b/Semester B web 2019/exercises/ex03/include/style.css
@@ -188,48 +188,34 @@ footer {
     height:105px;
 }
 
-.clear {
-    clear: both;
+#layout1 .dot{
+    left: 30px;
 }
 
-/* nav {
-    width: 300px;
-    height: 33px;
-    margin: 50px auto;
-    background-color: #000000;
+#layout2 .dot{
+    left: 110px;
 }
 
-nav span{
-    font-size: 24px;
-    color: #F2E9E9;
-    background-color: aqua;
-    width: 33.33%;
-}
 
-nav a{
-    display: block;
-    float: left;
-    margin: 0px auto;
-    margin-left: 15px;
-} */
-
-#layout1 ul{
+ul{
     width: 300px;
     height: 33px;
     margin: 50px auto;
     background-color: blueviolet;
     list-style-type: none;
-    
 }
 
-#layout1 ul li{
+ul li{
     float: left;
     margin: 0px auto;
-    margin-left: 15px;
-    
+    margin-left: 15px; 
 }
 
-#layout1 ul li span{
+ul li:hover{
+    text-decoration: underline;
+}
+
+ul li span{
     font-size: 24px;
     color: #000000;
     /* background-color: aqua; */
@@ -248,6 +234,10 @@ article {
     margin-top: 15px;
     margin-left: 15px;
     float: left;
+}
+
+.clear {
+    clear: both;
 }
 
 /* #layout1 ul {
@@ -295,13 +285,9 @@ article {
     
 }
 
-#layout1 .dot{
-    left: 30px;
-}
 
-/* #layout1 .MIX {
-    width: 25%;
-} */
+
+
 
 /* lec_4_46 */
 
