--- a/Semester B web 2019/includes/style.css
+++ b/Semester B web 2019/includes/style.css
@@ -128,6 +128,7 @@ main{
 }
 
 .Boundary{
+   position: relative;
     height:1px;
     mix-blend-mode: normal;
     opacity: 0.2;
@@ -137,30 +138,26 @@ main{
 }
 
 #Git{
-    padding-right: 150px;
+  
 }
 
 #Git a{  
-    position: absolute;
+    padding: 12px;
+    float:left;
     background: #C6B393;  
 }
 
 #Git span{
-    float: right;
-    padding-left: 10px;
-    padding-top: 10px;
+    padding: 15px;
 }
 
 
 #FiveLinks{
   padding-bottom: 53px; 
-  padding-left:150px;
-  
 }
 
 #FiveLinks a{
-    padding-left: 80px;
-   
+    padding-left: 59px;
 }
 
 #FiveLinks span{
