--- a/Semester B web 2019/exercises/ex3/include/style.css
+++ b/Semester B web 2019/exercises/ex3/include/style.css
@@ -25,7 +25,7 @@ a {
 
 
 footer {
-    float:left;
+    position: relative;
     width: 100%;
     height: 41px;
     background-color: #000000;
@@ -35,7 +35,7 @@ ul{
     width: 300px;
     height: 33px;
     margin: 50px auto;
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
     list-style-type: none;
 }
 
@@ -62,7 +62,7 @@ ul li span{
 }
 
 article {
-    background-color: black;
+    background-color:#000000;
     width: 126px;
     height: 94px;
     margin-top: 15px;
@@ -80,7 +80,7 @@ article {
     height: 14px;
     width: 14px; 
     bottom: 4px;
-    background-color: red;
+    background-color:#ff0000;
     border-radius: 50%;
     
 }
@@ -254,21 +254,98 @@ article {
 }
 
 #layout2 #wrapper{
-    width: 1440px;
-    height: 624px;
+    /* width: 1289px; */
+    width: 1289px;
+    height: 1775px;
     margin: 0px auto;
-    /* margin-top: 119px; */
+   
    
 }
 
-.flex-container{
-    
+.flex-container .firstBlackBox{
+    margin-top:119px;
+    float: left;
+    height: 80px;
+    width: 80px;
+    background-color:#000000; 
 }
 
+.flex-container .whiteBox{
+    margin-top:247px;
+    float: right;
+    height: 80px;
+    width: 80px;
+    background-color:#ffffff; 
+}
+
+.flex-container .secondBlackBox{
+    margin-top:616px;
+    float: left;
+    height: 80px;
+    width: 80px;
+    background-color:#000000; 
+}
+
+.sideText{
+    margin-top:1420px;
+   position: relative;
+}
+
+.sideText span{
+    display: block;
+    font-size: 96px; 
+    text-align: center;
+    color: #000000;
+}
+
+.sideText ol li{
+    text-align: center;
+    list-style-type: none;
+    margin-bottom: 15px;
+}
+
+.flex-container #leftBoxes{
+    float: right;
+    padding-top:119px;
+    width: 457px;
+    height: 1775px;
+}
+
+.flex-container #leftBoxes div{
+    margin-bottom: 70px;
+}
+
+.flex-container #rightBoxes{
+    float: right;
+    padding-top:257px; 
+    width: 457px;
+    height: 1775px;
+    margin-left:55px;
+    margin-right: 151px;
+}
+
+.flex-container #rightBoxes div{
+    margin-bottom: 70px;
+}
+
+
 .flex-container div {
-    float:left;
-    background-color: aquamarine;
-    margin-right: 55px; 
+    
+    background-color: #7fffd4;
+}
+
+#layout2 aside{
+    float: right;
+    background-color:#ffff00;
+    width: 169px;
+    height: 1800px;
+    
+     
+}
+
+
+#layout2{
+    
 }
 
 #layout2 .box1{
@@ -277,8 +354,6 @@ article {
 }
 
 #layout2 .box2{
-    margin-top: 150px; 
-    margin-bottom: -80px;
     width: 457px;
     height: 299px;
     
@@ -289,21 +364,18 @@ article {
     height: 299px;
 }
 
-#layout2 .box4{  
-    margin-top: 150px; 
-    margin-bottom: -80px; 
+#layout2 .box4{   
     width: 457px;
     height: 299px;
 }
 
 #layout2 .box5{   
     width: 457px;
-    height: 299px;
+    height: 205px;
+    /* height: 265px; */
 }
 
-#layout2 .box6{  
-    margin-top: 150px; 
-    margin-bottom: -80px; 
+#layout2 .box6{   
     width: 457px;
     height: 299px;
 }
@@ -313,9 +385,7 @@ article {
     height: 299px;
 }
 
-#layout2 .box8{  
-    margin-top: 150px; 
-    margin-bottom: -80px; 
+#layout2 .box8{   
     width: 457px;
     height: 299px;
 }
@@ -326,19 +396,12 @@ article {
 }
 
 #layout2 .box10{  
-    margin-top: 150px; 
-    margin-bottom: -80px; 
     width: 457px;
     height: 115px;
 }
  
 
-#layout2 aside{
-    float: right;
-    background-color: yellow;
-    width: 169px;
-    height: 1925px;
-}
+
 
 /* lec_4_46 */
 
@@ -346,7 +409,7 @@ article {
     position: relative;
     width: 450px;
     height: 150px;
-    background: red;
+    background:#ff0000;
 }
 
 #brand p {
@@ -354,7 +417,7 @@ article {
     right: 0px;
     top: 15px;
     text-align: center;
-    background: yellow;
+    background: #ffff00;
 }
 
 /* /lec_4_46 */
