--- a/Semester B web 2019/includes/style.css
+++ b/Semester B web 2019/includes/style.css
@@ -59,7 +59,7 @@ body header{
     padding-top:40px;
     padding-bottom: 40px;
     background-image: url(../images/icon3.png);
-    width:auto;
+    width:100%;
     height:auto;
     background-repeat: no-repeat;
 }
