--- a/Semester B web 2019/exercises/ex3/include/style.css
+++ b/Semester B web 2019/exercises/ex3/include/style.css
@@ -4,6 +4,7 @@
   
 }
 
+
 body {
     font-family: Arial;
 }
@@ -26,7 +27,6 @@ a {
 
 
 footer {
-
     position: relative;
     width: 100%;
     height: 41px;
@@ -50,7 +50,7 @@ ul li:hover{
     text-decoration: underline;
 }
 
-ul li span{
+ul li a{
     font-size: 24px;
     color: #000000;
     font-family: 'Amiko';
@@ -243,6 +243,16 @@ ul li span{
     height: 1860px;
     margin: 0px auto;
 }
+
+#layout2 footer {
+
+    position: fixed;
+    width: 100%;
+    height: 41px;
+    background-color: #000000;
+    bottom:0px;
+}
+
  .firstBlackBox{
     margin-top:119px;
     float: left;
@@ -271,14 +281,14 @@ ul li span{
     margin-top:1500px;
 }
 
-.sideText span{
+.sideText a{
     display: block;
     font-size: 96px; 
     text-align: center;
     color: #000000;
 }
 
-.sideText ol li{
+.sideText li{
     text-align: center;
     list-style-type: none;
     margin-bottom: 15px;
@@ -288,6 +298,7 @@ ul li span{
     float: right;
     margin-top: 119px;
     width: 457px;
+    
     height: 2024px;
 }
 
@@ -344,7 +355,8 @@ ul li span{
 
 #layout2 .box5{   
     width: 457px;
-    height: 265px;
+    /* height: 265px; */
+    height: 299px;
 }
 
 #layout2 .box6{   
@@ -369,7 +381,8 @@ ul li span{
 
 #layout2 .box10{  
     width: 457px;
-    height: 97px;
+    /* height: 97px; */
+    height: 299px;
 }
  
 
